# Assembly_Interpreter

./: AddOp.cpp  AddOp.h  CMakeLists.txt  CmpOp.cpp  CmpOp.h  IMutableValue.h  IOperation.h  Interpreter.cpp  Interpreter.h  JeOp.cpp  JeOp.h  JgOp.cpp  JgOp.h  JlOp.cpp  JlOp.h  JmpOp.cpp  JmpOp.h  Memory.cpp  Memory.h  MovOp.cpp  MovOp.h  MulOp.cpp  MulOp.h  MutableValue.h  PopOp.cpp  PopOp.h  PushOp.cpp  PushOp.h  README.md  Value.h  ValueLiteral.cpp  ValueLiteral.h  ValueRegister.cpp  ValueRegister.h  main.cpp
Include/: AddOp.h  CmpOp.h  IOperation.h  IValue.h  JeOp.h  JgOp.h  JlOp.h  JmpOp.h  Memory.h  MovOp.h  MulOp.h  ValueLiteral.h
Src/: AddOp.cpp  CmpOp.cpp  Interpreter.cpp  JeOp.cpp  JgOp.cpp  JlOp.cpp  JmpOp.cpp  Memory.cpp  MovOp.cpp  MulOp.cpp  ValueLiteral.cpp  ValueRegister.cpp  main.cpp
